# ironbeam

./: .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  FEATURE_GATING_PLAN.md  FEATURE_PARITY_PLAN.md  LICENSE  README.md  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: advanced_joins.rs  checkpoint_recovery_demo.rs  checkpointing_demo.rs  cloud_io_demo.rs  co_gbk.rs  combiners_showcase.rs  compressed_io.rs  data_quality_validation.rs  etl_pipeline.rs  explain_pipeline.rs  glob_patterns.rs  metrics_example.rs  multi_output.rs  testing_pipeline.rs  windowing_aggregations.rs
src/: bloom_filter.rs  checkpoint.rs  coders.rs  collection.rs  collection_helpers.rs  combiners.rs  extensions.rs  io.rs  lib.rs  metrics.rs  node.rs  node_id.rs  pipeline.rs  planner.rs  runner.rs  spill.rs  spill_integration.rs  stream_ops.rs  testing.rs  type_token.rs  utils.rs  validation.rs  window.rs
src/combiners/: basic.rs  collect.rs  count.rs  distinct.rs  latest.rs  mod.rs  quantiles.rs  sampling.rs  statistical.rs  topk.rs
src/helpers/: avro.rs  basic.rs  batches.rs  cloud.rs  co_gbk.rs  collect_sorted.rs  collect_values.rs  combine.rs  combine_global.rs  common.rs  count.rs  csv.rs  dead_letter.rs  display.rs  distinct.rs  filter.rs  flatten.rs  joins.rs  jsonl.rs  keyed.rs  latest.rs  log_elements.rs  mod.rs  msgpack.rs  named.rs  parquet.rs  partition.rs  regex.rs  reshuffle.rs  sampling.rs  side_inputs.rs  statistical.rs  stdlib.rs  tee.rs  timestamped.rs  topk.rs  try_process.rs  tumbling.rs  validation.rs  values.rs  (+3 more)
src/io/: avro.rs  compression.rs  csv.rs  glob.rs  jsonl.rs  mod.rs  msgpack.rs  parquet.rs  xml.rs
src/io/cloud/: fake.rs  helpers.rs  mod.rs  readers.rs  traits.rs  utils.rs
src/testing/: assertions.rs  builders.rs  debug.rs  fixtures.rs  mock_io.rs
tests/: approx_count_distinct.rs  batch_elements.rs  batch_map_values.rs  batching.rs  bloom_filter.rs  checkpoint.rs  co_gbk.rs  combine_global.rs  combiner_lifting.rs  combiners.rs  compression.rs  core.rs  count_per_element.rs  dead_letter.rs  distinct.rs  explain.rs  extensions.rs  feature_gating.rs  filter_enhanced.rs  glob_support.rs  group_into_batches.rs  integration.rs  io.rs  io_csv.rs  io_csv_streaming.rs  io_jsonl.rs  io_jsonl_streaming.rs  io_parquet.rs  io_parquet_streaming.rs  joins.rs  keys_values.rs  kv_swap.rs  lib.rs  log_elements.rs  macros.rs  mean.rs  mega_integration.rs  metrics.rs  multi_output.rs  named_operations.rs  (+27 more)
tests/combiners/: basic.rs  combine_global.rs  count.rs  distinct.rs  integration.rs  latest.rs  lifting.rs  mod.rs  quantiles.rs  sampling.rs  to_list.rs  to_set.rs
tests/helpers/: basic.rs  batching.rs  cloud.rs  distinct.rs  joins.rs  mod.rs  parquet.rs  regex.rs  reify.rs  reshuffle.rs  side_input.rs  statistical.rs  value_ops.rs  windowed_combine.rs  windowing.rs
tests/io/: avro.rs  cloud.rs  cloud_readers.rs  cloud_traits.rs  cloud_utils.rs  compression.rs  csv.rs  csv_streaming.rs  glob.rs  jsonl.rs  jsonl_streaming.rs  mod.rs  msgpack.rs  parquet.rs  parquet_streaming.rs  xml.rs
tests/testing/: assertions.rs  builders.rs  debug.rs  fixtures.rs  mock_io.rs  mod.rs
