[package]
name = "ironbeam"
version = "1.0.2"
edition = "2024"
license = "MIT"
description = "A batch processing clone of Apache Beam in Rust."
repository = "https://github.com/nhubbard/ironbeam"

[features]
default = ["io-jsonl", "io-csv", "io-parquet", "parallel-io", "compression-gzip", "compression-zstd", "compression-bzip2", "compression-xz", "metrics", "checkpointing"]

# IO backends
io-jsonl = []
io-csv = ["dep:csv"]
io-parquet = ["dep:parquet", "dep:arrow", "dep:serde_arrow"]

# Compression codecs (pluggable)
compression-gzip = ["dep:flate2"]
compression-zstd = ["dep:zstd"]
compression-bzip2 = ["dep:bzip2"]
compression-xz = ["dep:xz2"]

# Behaviors
parallel-io = []
metrics = []
checkpointing = ["dep:bincode", "dep:sha2"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
num_cpus = "1"
ordered-float = "5"
glob = "0.3"
bincode = { version = "2.0.1", features = ["serde"], optional = true }
sha2 = { version = "0.10", optional = true }

csv = { version = "1", optional = true }
arrow = { version = "57", optional = true }
parquet = { version = "57", optional = true }
serde_arrow = { version = "0.13", optional = true, features = ["arrow-57"] }

# Compression codecs
flate2 = { version = "1", optional = true }
zstd = { version = "0.13", optional = true }
bzip2 = { version = "0.6", optional = true }
xz2 = { version = "0.1", optional = true }
regex = "1.12.2"

# Testing utilities
tempfile = "3"

[dev-dependencies]
tempfile = "3"

[package.metadata.docs.rs]
all-features = true
