[package]
name = "ironbeam"
rust-version = "1.88.0"
version = "3.1.0"
edition = "2024"
license = "MIT"
description = "A batch processing clone of Apache Beam in Rust."
repository = "https://github.com/nhubbard/ironbeam"

[features]
default = ["io-jsonl", "io-csv", "io-parquet", "io-avro", "io-xml", "parallel-io", "compression-gzip", "compression-zstd", "compression-bzip2", "compression-xz", "metrics", "checkpointing", "spilling", "coders"]

# IO backends
io-jsonl = []
io-csv = ["dep:csv"]
io-parquet = ["dep:parquet", "dep:arrow", "dep:serde_arrow"]
io-avro = ["dep:apache-avro"]
io-xml = ["dep:quick-xml"]

# Additional I/O formats (Tier 5).
#
# Deliberate exception to the usual "everything on by default" tenant: these
# less-common connectors are intentionally absent from `default`. Each pulls in
# extra dependencies that would bloat the common build, so users opt in.
io-msgpack = ["dep:rmp-serde"]

# Compression codecs (pluggable)
compression-gzip = ["dep:flate2"]
compression-zstd = ["dep:zstd"]
compression-bzip2 = ["dep:bzip2"]
compression-xz = ["dep:xz2"]

# Behaviors
parallel-io = []
metrics = []
checkpointing = ["dep:postcard", "dep:sha2"]
spilling = ["dep:postcard"]

# Attach a per-PCollection Postcard-backed coder to every node at build time, so
# backends that ship elements across a wire (e.g., the Dataflow harness) can
# encode/decode each PCollection without the user registering types by hand.
# Tightens `Element` to require `serde::{Serialize, DeserializeOwned}`.
coders = ["dep:postcard"]

[dependencies]
# Core dependencies
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
num_cpus = "1"
ordered-float = "5"
glob = "0.3"
postcard = { version = "1", features = ["alloc"], optional = true }
sha2 = { version = "0.11", optional = true }
regex = "1.12.4"
paste = "1"
hyperloglogplus = "0.4"

# Optional encoding formats
apache-avro = { version = "0.21", optional = true }
quick-xml = { version = "0.40", features = ["serialize"], optional = true }
csv = { version = "1", optional = true }
rmp-serde = { version = "1", optional = true }
arrow = { version = "59", optional = true }
parquet = { version = "59", optional = true }
serde_arrow = { version = "0.14", optional = true, features = ["arrow-59"] }

# Compression codecs
flate2 = { version = "1", optional = true }
zstd = { version = "0.13", optional = true }
bzip2 = { version = "0.6", optional = true }
xz2 = { version = "0.1", optional = true }

# Testing dependency, used in testing module and in tests
tempfile = "3"

[dev-dependencies]
mark-flaky-tests = "1"

[package.metadata.docs.rs]
all-features = true

[lints.rust]
unused_imports = "allow"